feat(cargo-toml): update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "geny"
 authors = ["Shalev Ari"]
 version = "0.1.0"
 edition = "2021"
+description = "Blazingly fast license generation!"
+license = "MIT"
 
 
 [dependencies]
